--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
     "bootstrap": "^4.4.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-15": "^1.4.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-mock-router": "^1.0.15",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
